- Eliminacion de locationId en el README y corrección de errores.
- Cambios en los Controller para que hagan el funcionamiento con los DTO