@@ -1,13 +1,10 @@
 package com.example.projectProducts.rest;
 
 
-import com.example.projectProducts.modelo.*;
-import com.example.projectProducts.modelo.DTO.AddProductShopDTO;
-import com.example.projectProducts.modelo.DTO.ProductPricePatchDTO;
-import com.example.projectProducts.modelo.DTO.ShopAddDTO;
-import com.example.projectProducts.modelo.DTO.UpdateShopDTO;
+import com.example.projectProducts.modelo.DTO.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.math.BigDecimal;
@@ -19,35 +16,38 @@ import java.util.List;
 @RequestMapping("")
 public class ShopController {
 
-    private List<ShopLocation> shopLocations = new ArrayList<>();
-    private List<ProductPriceModel> productPrices = new ArrayList<>();
+    private List<ShopLocationDTO> shopLocationDTOS = new ArrayList<>();
+    private List<ProductPriceModelDTO> productPriceModelDTOS = new ArrayList<>();
 
 
     public ShopController() {
 
-        shopLocations.add(new ShopLocation("España", "A Coruña", "Los Mallos, 10"));
-        shopLocations.add(new ShopLocation("Argentina", "Buenos Aires", "Dirección inventada"));
-        shopLocations.add(new ShopLocation("España", "Santiago", "Av. Toledo"));
+        shopLocationDTOS.add(new ShopLocationDTO("España", "A Coruña", "Los Mallos, 10"));
+        shopLocationDTOS.add(new ShopLocationDTO("Argentina", "Buenos Aires", "Dirección inventada"));
+        shopLocationDTOS.add(new ShopLocationDTO("España", "Santiago", "Av. Toledo"));
 
-        productPrices.add(new ProductPriceModel(new BigDecimal("25.50"), "E2", 1));
-        productPrices.add(new ProductPriceModel(new BigDecimal("25.50"), "A2", 2));
-        productPrices.add(new ProductPriceModel(new BigDecimal("15.00"), "E3", 3));
+        productPriceModelDTOS.add(new ProductPriceModelDTO(1, new BigDecimal("25.50")));
+        productPriceModelDTOS.add(new ProductPriceModelDTO(2, new BigDecimal("25.50")));
+        productPriceModelDTOS.add(new ProductPriceModelDTO(3, new BigDecimal("15.00")));
     }
 
 
     @GetMapping("/shops")
-    public List<ShopLocation> getAllShops() {
-        return shopLocations;
+    public List<ShopLocationDTO> getAllShops() {
+        return shopLocationDTOS;
     }
 
     @GetMapping("/shop/{shopId}")
-    public List<Object> getShopLocation(@PathVariable int shopId) {
-        List<ShopLocation> foundShops = new ArrayList<>();
+    public List<ShopLocationDTO> getShopLocationDTO(@PathVariable Integer shopId) {
 
-        for (ShopLocation shopLocation : shopLocations) {
-            if (shopLocation.getShopId() == shopId) {
-                foundShops.add(shopLocation);
-                return Collections.singletonList(foundShops);  // Devuelve la tienda encontrada en una lista
+        for (ShopLocationDTO shopLocationDTO : shopLocationDTOS) {
+            if (shopLocationDTO.getShopId() == shopId) {
+                return List.of(new ShopLocationDTO(
+                        shopLocationDTO.getShopId(),
+                        shopLocationDTO.getCountry(),
+                        shopLocationDTO.getCity(),
+                        shopLocationDTO.getAddress()
+                ));
             }
         }
 
@@ -55,32 +55,81 @@ public class ShopController {
     }
 
 
-
     @PostMapping("/shop")
-    public ResponseEntity<Object> addShop(@RequestBody ShopAddDTO newShopDTO) {
+    public ResponseEntity<ShopLocationDTO> addShop(@RequestBody ShopAddDTO newShopDTO) {
 
-        ShopLocation newShop = new ShopLocation();
+        ShopLocationDTO newShopLocation = new ShopLocationDTO();
 
-        for (ShopLocation shop : shopLocations) {
+        for (ShopLocationDTO shop : shopLocationDTOS) {
 //           Comprobación para que la calle no exista dos veces,para ello se comprueba que sea en la misma ciudad y país.
 
             if (shop.getCountry().equalsIgnoreCase(newShopDTO.getCountry()) && shop.getCity().equalsIgnoreCase(newShopDTO.getCity()) && shop.getAddress().equalsIgnoreCase(newShopDTO.getAddress())) {
-                return ResponseEntity.status(HttpStatus.CONFLICT).body("That address alredy exists");
+                String message = "That field already exists";
+                return ResponseEntity.status(HttpStatus.CONFLICT).build();
             }
         }
-        newShop.setShopId(ShopLocation.getNextId());
-        newShop.setCountry(newShopDTO.getCountry());
-        newShop.setCity(newShopDTO.getCity());
-        newShop.setAddress(newShopDTO.getAddress());
+        newShopLocation.setShopId(ShopLocationDTO.getNextId());
+        newShopLocation.setCountry(newShopDTO.getCountry());
+        newShopLocation.setCity(newShopDTO.getCity());
+        newShopLocation.setAddress(newShopDTO.getAddress());
+        shopLocationDTOS.add(newShopLocation);
 
-        shopLocations.add(newShop);
+        return ResponseEntity.status(HttpStatus.CREATED).body(newShopLocation);
+    }
 
-        return ResponseEntity.ok(newShop);
+
+    @PostMapping("/shop/addProduct/{productId}")
+    public ResponseEntity<ProductPriceModelDTO> addProductShop(@PathVariable int productId, @RequestBody AddProductShopDTO product) {
+        BigDecimal price = product.getPrice();
+
+
+        if (price == null) {
+            return ResponseEntity.badRequest().build();
+        }
+
+        if (price.compareTo(BigDecimal.ZERO) < 0) {
+//            return ResponseEntity.badRequest().body("The price cannot be negative");
+            return ResponseEntity.badRequest().build();
+        }
+
+        boolean found = false;
+        for (ProductPriceModelDTO productsList : productPriceModelDTOS) {
+            if (productId == productsList.getProductId()) {
+                found = true;
+                break;
+            }
+        }
+
+        if (!found) {
+//            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Product does not exist");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+        }
+
+
+        for (ProductPriceModelDTO existingProduct : productPriceModelDTOS) {
+            if (existingProduct.getProductId() == productId && existingProduct.getPrice().equals(price)) {
+                return ResponseEntity.status(HttpStatus.CONFLICT).build();
+            }
+        }
+        for (ShopLocationDTO currentShop : shopLocationDTOS) {
+            if (currentShop.getShopId() == productId) {
+                ProductPriceModelDTO newProduct = new ProductPriceModelDTO();
+                newProduct.setProductId(productId);
+                newProduct.setPrice(price);
+
+                productPriceModelDTOS.add(newProduct);
+
+                return ResponseEntity.ok(newProduct);
+            }
+        }
+
+        return ResponseEntity.notFound().build();
+
     }
 
     @DeleteMapping("/shop/{shopId}")
-    public ResponseEntity<String> deleteShop(@PathVariable int shopId) {
-        boolean removed = shopLocations.removeIf(shop -> shop.getShopId() == shopId);
+    public ResponseEntity<ShopLocationDTO> deleteShop(@PathVariable int shopId) {
+        boolean removed = shopLocationDTOS.removeIf(shop -> shop.getShopId() == shopId);
 
         if (removed) {
             return ResponseEntity.ok().build();
@@ -89,39 +138,17 @@ public class ShopController {
         }
     }
 
-
-    @GetMapping("/shop/filter")
-    public List<ShopLocation> getShopLocationWithFilters(
-            @RequestParam(required = false) String country,
-            @RequestParam(required = false) String city,
-            @RequestParam(required = false) String address) {
-
-        List<ShopLocation> shops = new ArrayList<>(shopLocations);
-
-        if (country != null) {
-            shops.removeIf(shop -> !shop.getCountry().toLowerCase().contains(country.toLowerCase()));
-
-        }
-        if (city != null) {
-            shops.removeIf(shop -> !shop.getCity().toLowerCase().contains(city.toLowerCase()));
-        }
-
-        if (address != null) {
-            shops.removeIf(shop -> !shop.getAddress().toLowerCase().contains(address.toLowerCase()));
-        }
-        return shops;
-    }
-
     @PutMapping("/shop/{shopId}")
-    public ResponseEntity<Object> updateShop(@PathVariable int shopId, @RequestBody UpdateShopDTO updateShopDTO) {
-        for (int i = 0; i < shopLocations.size(); i++) {
-            ShopLocation currentShop = shopLocations.get(i);
+    public ResponseEntity<ShopLocationDTO> updateShop(@PathVariable int shopId, @Validated @RequestBody UpdateShopDTO updateShopDTO) {
+        for (int i = 0; i < shopLocationDTOS.size(); i++) {
+            ShopLocationDTO currentShop = shopLocationDTOS.get(i);
 
             if (currentShop.getShopId() == shopId) {
 
-                if ( updateShopDTO.getCountry() == null ||
+                if (updateShopDTO.getCountry() == null ||
                         updateShopDTO.getCity() == null || updateShopDTO.getAddress() == null) {
-                    return ResponseEntity.badRequest().body("The fields cannot be empty");
+//                    return ResponseEntity.badRequest().body("The fields cannot be empty");
+                    return ResponseEntity.badRequest().build();
                 }
                 currentShop.setCountry(updateShopDTO.getCountry());
                 currentShop.setCity(updateShopDTO.getCity());
@@ -134,10 +161,11 @@ public class ShopController {
 
     }
 
+
     @PatchMapping("/shop/{shopId}")
-    public ResponseEntity<Object> partialUpdateShop(@PathVariable int shopId, @RequestBody UpdateShopDTO updateShopDTO) {
-        ShopLocation shopLocation = null;
-        for (ShopLocation shop : shopLocations) {
+    public ResponseEntity<ShopLocationDTO> partialUpdateShop(@PathVariable int shopId, @RequestBody UpdateShopDTO updateShopDTO) {
+        ShopLocationDTO shopLocation = null;
+        for (ShopLocationDTO shop : shopLocationDTOS) {
             if (shop.getShopId() == shopId) {
                 shopLocation = shop;
                 break;
@@ -150,15 +178,18 @@ public class ShopController {
 
         // Validar los campos del DTO
         if (updateShopDTO.getCountry() != null && updateShopDTO.getCountry().trim().isEmpty()) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Country cannot be empty");
+//            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Country cannot be empty");
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
         }
 
         if (updateShopDTO.getCity() != null && updateShopDTO.getCity().trim().isEmpty()) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("City cannot be empty");
+//            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("City cannot be empty");
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
         }
 
         if (updateShopDTO.getAddress() != null && updateShopDTO.getAddress().trim().isEmpty()) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Address cannot be empty");
+//            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Address cannot be empty");
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
         }
 
         // Actualizar solo los campos no nulos
@@ -176,70 +207,25 @@ public class ShopController {
     }
 
 
-
-    @PostMapping("/shop/addProduct/{productId}")
-    public ResponseEntity<Object> addProductShop(@PathVariable int productId, @RequestBody AddProductShopDTO product) {
-        BigDecimal price = product.getPrice();
-        boolean found = false;
-        if (price == null) {
-            return ResponseEntity.badRequest().build();
-        }
-
-        if (price.compareTo(BigDecimal.ZERO) < 0) {
-            return ResponseEntity.badRequest().body("The price cannot be negative");
-        }
-
-        for (ProductPriceModel productsList : productPrices) {
-            if (productId == productsList.getProductId()) {
-                found = true;
-            }
-        }
-
-        if (!found) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Product does not exist");
-        }
-
-        boolean alreadyAdded = productPrices.stream()
-                .anyMatch(p -> p.getProductId() == productId);
-
-        if (alreadyAdded) {
-            return ResponseEntity.status(HttpStatus.CONFLICT).body("This product already exists in that shop");
-        }
-
-
-        for (ShopLocation currentShop : shopLocations) {
-            if (currentShop.getShopId() == productId) {
-                ProductPriceModel newProduct = new ProductPriceModel();
-                newProduct.setProductId(productId);
-                newProduct.setPrice(price);
-
-                productPrices.add(newProduct);
-
-                return ResponseEntity.ok(newProduct);
-            }
-        }
-
-        return ResponseEntity.notFound().build();
-
-    }
-
     @PatchMapping("/shop/{shopId}/product/{productId}")
-    public ResponseEntity<Object> updateProductPrice(@PathVariable int shopId, @PathVariable int productId, @RequestBody ProductPricePatchDTO productPricePatchDTO) {
+    public ResponseEntity<ProductPriceModelDTO> updateProductPrice(@PathVariable int shopId, @PathVariable int productId, @RequestBody ProductPricePatchDTO productPricePatchDTO) {
 
         if (productPricePatchDTO.getPrice() == null) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Price cannot be empty");
+//            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Price cannot be empty");
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
         }
 
-        ShopLocation shopLocation = shopLocations.stream()
+        ShopLocationDTO shopLocation = shopLocationDTOS.stream()
                 .filter(shop -> shop.getShopId() == shopId)
                 .findFirst()
                 .orElse(null);
 
         if (shopLocation == null) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Shop not found");
+//            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Shop not found");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
         }
 
-        for (ProductPriceModel product : productPrices) {
+        for (ProductPriceModelDTO product : productPriceModelDTOS) {
             if (product.getProductId() == productId) {
                 product.setPrice(productPricePatchDTO.getPrice());
                 return ResponseEntity.ok(product);
@@ -248,6 +234,37 @@ public class ShopController {
 
         return ResponseEntity.notFound().build();
     }
+
+
+    @GetMapping("/shop/filter")
+    public ResponseEntity<List<ShopLocationDTO>> getShopLocationWithFilters(
+            @RequestParam(required = false) String country,
+            @RequestParam(required = false) String city,
+            @RequestParam(required = false) String address) {
+
+        List<ShopLocationDTO> shops = new ArrayList<>(shopLocationDTOS);
+        if(city == null && country == null && address == null){
+            return ResponseEntity.badRequest().build();
+        }
+
+        if (country != null) {
+            shops.removeIf(shop -> !shop.getCountry().toLowerCase().contains(country.toLowerCase()));
+
+        }
+        if (city != null) {
+            shops.removeIf(shop -> !shop.getCity().toLowerCase().contains(city.toLowerCase()));
+        }
+
+        if (address != null) {
+            shops.removeIf(shop -> !shop.getAddress().toLowerCase().contains(address.toLowerCase()));
+        }
+
+        if(shops.isEmpty()){
+            return ResponseEntity.notFound().build();
+        }
+        return ResponseEntity.ok(shops);
+    }
+
 
 }
 
